<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.karoldabrowski.scorekeeper.BasketballActivity">

    <ImageView
        android:src="@drawable/basketball"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_team"
                android:textSize="20sp"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="48sp"
                android:id="@+id/home_score"
                android:layout_marginTop="12dp"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true" />

            <Button
                android:text="@string/three_points_button_text"
                android:tag="3"
                android:onClick="addPointsForHomeTeam"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/two_points_button_text"
                android:tag="2"
                android:onClick="addPointsForHomeTeam"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/free_throw_button_text"
                android:tag="1"
                android:onClick="addPointsForHomeTeam"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_height="match_parent">
        </View>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_team"
                android:textSize="20sp"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="48sp"
                android:id="@+id/away_score"
                android:layout_marginTop="12dp"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true" />

            <Button
                android:text="@string/three_points_button_text"
                android:tag="3"
                android:onClick="addPointsForAwayTeam"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/two_points_button_text"
                android:tag="2"
                android:onClick="addPointsForAwayTeam"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/free_throw_button_text"
                android:tag="1"
                android:onClick="addPointsForAwayTeam"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:orientation="horizontal">

        <Button
            android:text="@string/back_button_text"
            android:onClick="back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/reset_button_text"
            android:onClick="reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
