<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.karoldabrowski.scorekeeper.TennisActivity">

    <ImageView
        android:src="@drawable/tennis"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/players_space"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/TeamViewStyle"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_player"
                android:textSize="@dimen/team_name_text_size"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_points"
                android:textSize="@dimen/score_text_size"
                android:id="@+id/first_player_points"
                android:layout_marginTop="@dimen/score_margin_top"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true" />

            <Button
                android:text="@string/point_button_text"
                android:onClick="addPoints"
                android:tag="A"
                android:layout_marginRight="@dimen/score_button_margin_right"
                android:layout_marginLeft="@dimen/score_button_margin_left"
                android:layout_marginTop="@dimen/score_first_button_margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            style="@style/TeamsBorder"
            android:layout_height="match_parent">
        </View>

        <LinearLayout
            style="@style/TeamViewStyle"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_player"
                android:textSize="@dimen/team_name_text_size"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_points"
                android:textSize="@dimen/score_text_size"
                android:id="@+id/second_player_points"
                android:layout_marginTop="@dimen/score_margin_top"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true" />

            <Button
                android:text="@string/point_button_text"
                android:onClick="addPoints"
                android:tag="B"
                android:layout_marginRight="@dimen/score_button_margin_right"
                android:layout_marginLeft="@dimen/score_button_margin_left"
                android:layout_marginTop="@dimen/score_first_button_margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:padding="@dimen/result_table_padding"
        android:layout_marginTop="@dimen/result_table_margin_top"
        android:id="@+id/score_space"
        android:layout_below="@id/players_space"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:text=" "
                android:layout_width="@dimen/result_table_text_view_width"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/first_player"
                android:layout_width="@dimen/result_table_text_view_width"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/second_player"
                android:layout_width="@dimen/result_table_text_view_width"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            style="@style/ResultTableBorders">
        </View>

        <TableRow>

            <TextView
                android:text="@string/set_1_text"
                android:layout_width="@dimen/result_table_text_view_width"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/default_points"
                android:layout_width="@dimen/result_table_text_view_width"
                android:id="@+id/player_a_set_1"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/default_points"
                android:layout_width="@dimen/result_table_text_view_width"
                android:id="@+id/player_b_set_1"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:id="@+id/set_2_border"
            android:visibility="gone"
            style="@style/ResultTableBorders">
        </View>

        <TableRow
            android:id="@+id/set_2_row"
            android:visibility="gone">

            <TextView
                android:text="@string/set_2_text"
                android:layout_width="@dimen/result_table_text_view_width"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/default_points"
                android:layout_width="@dimen/result_table_text_view_width"
                android:id="@+id/player_a_set_2"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/default_points"
                android:layout_width="@dimen/result_table_text_view_width"
                android:id="@+id/player_b_set_2"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:id="@+id/set_3_border"
            android:visibility="gone"
            style="@style/ResultTableBorders">
        </View>

        <TableRow
            android:id="@+id/set_3_row"
            android:visibility="gone">

            <TextView
                android:text="@string/set_3_text"
                android:layout_width="@dimen/result_table_text_view_width"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/default_points"
                android:layout_width="@dimen/result_table_text_view_width"
                android:id="@+id/player_a_set_3"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/default_points"
                android:layout_width="@dimen/result_table_text_view_width"
                android:id="@+id/player_b_set_3"
                android:textSize="@dimen/result_table_text_size"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/controls_section_padding"
        android:id="@+id/navigation_space"
        android:orientation="horizontal">

        <Button
            android:text="@string/back_button_text"
            android:onClick="back"
            android:layout_width="@dimen/control_buttons_width"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/back_button_margin_right"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/reset_button_text"
            android:id="@+id/reset_button"
            android:onClick="reset"
            android:layout_width="@dimen/control_buttons_width"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/reset_button_margin_left"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/play_again_button_text"
            android:id="@+id/play_again_button"
            android:onClick="reset"
            android:layout_width="@dimen/control_buttons_width"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/reset_button_margin_left"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/winner_space_padding_top"
        android:id="@+id/winner_space"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:text="@string/tennis_match_winner"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/winner_text_text_size"
            android:layout_height="wrap_content" />

        <TextView
            android:text=""
            android:id="@+id/winner_text_field"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/winner_text_size"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>